<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">thornotes</string>
    <string name="setup_tagline">Enter the address of your thornotes server to connect.</string>
    <string name="server_url_label">Server URL</string>
    <string name="server_url_hint">http://192.168.1.x:8080</string>
    <string name="connect">Connect</string>
    <string name="change_server">Change server…</string>
    <string name="reload">Reload</string>
    <string name="setup_hint">Running locally on your network? Use your server\'s local IP address.\nHosted remotely? Enter your public URL.</string>
</resources>
